// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SignUpForm matches snapshot for signup form default state 1`] = `
<form
  class="flex flex-col gap-4"
>
  <input
    class="input input-bordered w-full"
    placeholder="Full name"
    required=""
    type="text"
    value=""
  />
  <input
    class="input input-bordered w-full"
    placeholder="Username"
    required=""
    type="text"
    value=""
  />
  <input
    class="input input-bordered w-full"
    placeholder="Email"
    required=""
    type="email"
    value=""
  />
  <input
    class="input input-bordered w-full"
    placeholder="Password (6+ characters)"
    required=""
    type="password"
    value=""
  />
  <button
    class="btn btn-primary w-full text-white"
    type="submit"
  >
    Agree & Join
  </button>
</form>
`;

exports[`SignUpForm matches snapshot for signup form focused state 1`] = `
<form
  class="flex flex-col gap-4"
>
  <input
    class="input input-bordered w-full"
    placeholder="Full name"
    required=""
    type="text"
    value=""
  />
  <input
    class="input input-bordered w-full"
    placeholder="Username"
    required=""
    type="text"
    value=""
  />
  <input
    class="input input-bordered w-full"
    placeholder="Email"
    required=""
    type="email"
    value=""
  />
  <input
    class="input input-bordered w-full"
    placeholder="Password (6+ characters)"
    required=""
    type="password"
    value=""
  />
  <button
    class="btn btn-primary w-full text-white"
    type="submit"
  >
    Agree & Join
  </button>
</form>
`;

exports[`SignUpForm matches snapshot for signup form with filled fields 1`] = `
<form
  class="flex flex-col gap-4"
>
  <input
    class="input input-bordered w-full"
    placeholder="Full name"
    required=""
    type="text"
    value="John Doe"
  />
  <input
    class="input input-bordered w-full"
    placeholder="Username"
    required=""
    type="text"
    value="johndoe"
  />
  <input
    class="input input-bordered w-full"
    placeholder="Email"
    required=""
    type="email"
    value="john@example.com"
  />
  <input
    class="input input-bordered w-full"
    placeholder="Password (6+ characters)"
    required=""
    type="password"
    value="password123"
  />
  <button
    class="btn btn-primary w-full text-white"
    type="submit"
  >
    Agree & Join
  </button>
</form>
`;
